--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             </div>
             <div class="artjoker flex-container">
                 Разработка и поддержка сайта -
-                <img src="./../../img/artjoker.png" alt="" width="51" height="16">
+                <img src="./img/artjoker.png" alt="" width="51" height="16">
             </div>
         </div>
     </div>
