--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
                 <div class="fitness-slider__nav"><img src="./img/f-slide.jpg" alt="" width="327" height="245"></div>
                 <div class="fitness-slider__nav"><img src="./img/f-slide2.jpg" alt="" width="327" height="245">
                 </div>
-                <div class="fitness-slider__nav"><img src="./img/f-slide3.jpg" alt="" width="326" height="245">
+                <div class="fitness-slider__nav"><img src="./img/f-slide3.jpg" alt="" width="327" height="245">
                 </div>
                 <div class="fitness-slider__nav"><img src="./img/f-slide.jpg" alt="" width="327" height="245"></div>
                 <div class="fitness-slider__nav"><img src="./img/f-slide2.jpg" alt="" width="327" height="245">
                 </div>
-                <div class="fitness-slider__nav"><img src="./img/f-slide3.jpg" alt="" width="326" height="245">
+                <div class="fitness-slider__nav"><img src="./img/f-slide3.jpg" alt="" width="327" height="245">
                 </div>
             </div>
         </div>
@@ -346,14 +346,17 @@
             <div class="instagram__body-item">
                 <a href="#"><img src="./img/insta5.jpg" alt="" width="280" height="280"></a>
             </div>
-            <div class="instagram__body-item instagram__body-info">
-                <a href="#">
-                    <div class="instagram__body-info-circle"><img src="./img/instagram.svg" alt="" width="32"
-                            height="32">
-                    </div>
-                </a>
-                <div class="instagram__body-info-name">@ceramica</div>
-                <div class="instagram__body-info-button"><a href="#">Подписаться</a></div>
+            <div class="instagram__body-item test">
+                <div class="instagram__body-info">
+                    <a href="#">
+                        <div class="instagram__body-info-circle"><img src="./img/instagram.svg" alt="" width="32"
+                                height="32">
+                        </div>
+                    </a>
+
+                    <div class="instagram__body-info-name">@ceramica</div>
+                    <div class="instagram__body-info-button"><a href="#">Подписаться</a></div>
+                </div>
             </div>
         </div>
     </div>
