--- a/index.html
+++ b/index.html
@@ -26,21 +26,25 @@
             <img src="img/logo.svg" alt="" width="96" height="86">
         </div>
         <img class="menu__button" src="./img/menu.png" alt="" width="30" height="20">
-        <ul class="menu">
-            <li><a href="#">В магазин</a></li>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Партнерам</a></li>
-            <li class="mark"><a href="#"><span>3D</span>-визуализация</a></li>
-            <li><a href="#">КОНТАКТЫ</a></li>
-            <li>
-                <div class="menu__language">
-                    <span>RU</span>
-                    <p>UKR</p>
-                    <img class="language" src="img/polygon.png" alt="" width="6" height="3">
-                </div>
-            </li>
-        </ul>
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="#">В магазин</a>
+                </li>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">Информация</a></li>
+                <li><a href="#">Партнерам</a></li>
+                <li class="mark"><a href="#"><span>3D</span>-визуализация</a></li>
+                <li><a href="#">КОНТАКТЫ</a></li>
+                <li>
+                    <div class="menu__language">
+                        <span>RU</span>
+                        <p>UKR</p>
+                        <img class="language" src="img/polygon.png" alt="" width="6" height="3">
+                    </div>
+                </li>
+            </ul>
+        </nav>
         <div class="icons">
             <i class="lupa"></i>
             <i class="teresa"></i>
@@ -53,25 +57,24 @@
     <div class="body-wrapper">
         <div class="line"></div>
         <div class="main-slider__text">
-            <div class="main-slider__text-header">Керамика <br>для ваших идей</div>
+            <h1 class="main-slider__text-header">Керамика <br>для ваших идей</h1>
             <div class="main-slider__text-description">Лучшие европейские коллекции керамики и керамогранита</div>
             <div class="main-slider__text-icons">
 
-                <div>
-                    <img src="./img/fb.svg" alt="" width="32" height="32">
+                <div><a href="#" class="fb">
+                        <img src="./img/fb.svg" alt="" width="32" height="32"></a>
                 </div>
 
-
-                <div>
-                    <img src="./img/instagram.svg" alt="" width="32" height="32">
+                <div><a href="#" class="insta">
+                        <img src="./img/instagram.svg" alt="" width="32" height="32"></a>
                 </div>
 
-                <div>
-                    <img src="./img/youtube.svg" alt="" width="32" height="32">
+                <div><a href="#" class="youtube">
+                        <img src="./img/youtube.svg" alt="" width="32" height="32"></a>
                 </div>
 
-                <div>
-                    <img src="./img/pinterest.svg" alt="" width="32" height="32">
+                <div><a href="#" class="pint">
+                        <img src="./img/pinterest.svg" alt="" width="32" height="32"></a>
                 </div>
 
                 <div class="main-slider__text-manage"></div>
@@ -385,13 +388,13 @@
                 <img src="./img/footer-logo.svg" alt="" width="126" height="114">
                 <div class="item-logo-icons">
                     <span>
-                        <img src="./img/fb.svg" alt="" width="32" height="32">
+                        <a href="#" class="fb-footer"><img src="./img/fb.svg" alt="" width="32" height="32"></a>
                     </span>
                     <span>
-                        <img src="./img/instagram.svg" alt="" width="32" height="32">
+                        <a href="#"><img src="./img/instagram.svg" alt="" width="32" height="32"></a>
                     </span>
                     <span>
-                        <img src="./img/youtube.svg" alt="" width="32" height="32">
+                        <a href="#"><img src="./img/youtube.svg" alt="" width="32" height="32"></a>
                     </span>
                 </div>
                 <img class="footer__button" src="./img/menu.png" alt="" width="30" height="20">
@@ -453,6 +456,11 @@
         </div>
     </div>
 </div>
+    <div class="test">
+        <a href="">
+            <img src="./img/logo.svg" alt="">
+        </a>
+    </div>
 </body>
 
 </html>
